--- a/views/index.ejs
+++ b/views/index.ejs
@@ -92,40 +92,29 @@
                     </div>
 
                     <div class="content__event__carousel">
-                        <div class="content__event__carousel__wrap">
-
-                            <div class="slide">
-                                <div>
-                                <a aria-hidden="true" style="display: inline-block;">
-                                    <img src="/images/coffee_twig.png" />
-                                </a>
-                                <a  aria-hidden="false" style="display: inline-block;">
-                                    <img src="/images/coffee_twig.png" />
-                                </a>
-                                <a  aria-hidden="false" style="display: inline-block;">
-                                    <img src="/images/coffee_twig.png" />
-                                </a>
+                        <div class="slide">
+                            <div class="item--first">
+                                <img src="/images/coffee_twig.png" />
                             </div>
-                                
-                                
-
-
-                                
+                            <div class="item--second">
+                                <img src="/images/coffee_twig.png" />
                             </div>
-                            
+                            <div class="item--third">
+                                <img src="/images/coffee_twig.png" />
+                            </div>
                         </div>
 
-                        <div class="carousel__paging">
-                            <span class="carousel__paging__inner">
+                        <div class="paging">
+                            <span class="paging__inner">
                                 <span class="current"></span>
                                 <span></span>
                                 <span></span>
                             </span>
 
-                            <button class="carousel__paging--prev">
+                            <button class="paging--prev">
                                 <span class="i-slide__paging--prev"></span>
                             </button>
-                            <button class="carousel__paging--next">
+                            <button class="paging--next">
                                 <span class="i-slide__paging--next"></span>
                             </button>
                         </div>
