complete carousel_slide and express img 가져오는거 해보기

--- a/views/index.html
+++ b/views/index.html
@@ -77,19 +77,26 @@
                             <img src="https://shop4.daumcdn.net/shophow/sib/0_210219174900_cCDgZtbAhPiBQqcJamsODOWNoVrXILeM"
                                 alt="">
                         </div>
-                        <div class="slider">
-                            <div class="carousel_slide">
-                                <img class="items" id="lastClone"
-                                    src="https://shop3.daumcdn.net/shophow/sib/0_210219175556_BtjOWRoiPbsVXvlYusgFvjboDPXRIBQD">
-                                <img class="items"
-                                    src="https://shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs">
-                                <img class="items" id="firstClone"
-                                    src="https://shop1.daumcdn.net/shophow/sib/0_210219175602_vRyGDQxWDethcelhYcMmXKXpgLqlAIAj">
-                            </div>
-                            <div>
-                                <button class="left"><div class="left_button"></div></button>
-                                <button class="right"><div class="right_button"></div></button>
-                                <span></span>
+                        <div class="slider_box">
+                            <div class="slider">
+                                <div class="carousel_slide">
+                                    <img class="items" id="last"
+                                        src="https://shop1.daumcdn.net/shophow/sib/0_210219175602_vRyGDQxWDethcelhYcMmXKXpgLqlAIAj">
+                                    <img class="items" id="first"
+                                        src="https://shop3.daumcdn.net/shophow/sib/0_210219175556_BtjOWRoiPbsVXvlYusgFvjboDPXRIBQD">
+                                    <img class="items"
+                                        src="https://shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs">
+                                    
+                                </div>
+                                <div>
+                                    <button class="left">
+                                        <div class="left_button"></div>
+                                    </button>
+                                    <button class="right">
+                                        <div class="right_button"></div>
+                                    </button>
+                                    <span></span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -382,7 +389,6 @@
             </div>
         </div>
     </middle>
-
     <script src="button.js"></script>
 </body>
 
