--- a/scss/header.scss
+++ b/scss/header.scss
@@ -132,6 +132,7 @@ header {
       cursor: pointer;
       border: 0;
       background-color: transparent;
+      width: 170px;
       &__image-span {
         width: 30px;
         height: 30px;
