--- a/scss/index.scss
+++ b/scss/index.scss
@@ -68,6 +68,7 @@ main {
         text-align: center;
         position: relative;
         top: -6vh;
+        font-size: 0;
         cursor: default;
         &__button {
           display: inline-block;
@@ -75,6 +76,7 @@ main {
           height: 5px;
           background-color: #ccc;
           transition: background-color 0.3s linear;
+          margin: 0 3px;
           &.active {
             background-color: #000;
           }
