--- a/shoppingHow/views/index.ejs
+++ b/shoppingHow/views/index.ejs
@@ -85,8 +85,9 @@
             </div>
           </section>
           <section class="section_products">
-            그리드박스
-            <button>더보기</button>
+            <ul>
+              <!--제품들 10개 들어갈 예정-->
+            </ul>
           </section>
           <section class="section_categories">
             <span>지금 뜨는 테마 카테고리</span>
