변수 line-height수정

--- a/public/style/var.scss
+++ b/public/style/var.scss
@@ -15,7 +15,8 @@ $nav-item-border-radius: 50%;
 $small-img-size-width: 12.5rem;
 $small-img-size-height: 12.5rem;
 $small-img-padding: 0 1rem;
-$small-title-line-height: 2rem;
+$small-title-line-height: 0;
 $smail-desc-font-size: 0.7rem;
 $show-more-btn-background-color: #E9E9E9;
 $arrow-size: 3rem;
+$slide-movement-length: 35rem;
