Test: set up module & router.
- Test request & response bt. server & client.
- Create JS files for each Classes.
- Fix set up by edditing app.js.

--- a/shopping_how/public/stylesheets/main.scss
+++ b/shopping_how/public/stylesheets/main.scss
@@ -365,7 +365,7 @@ header {
   box-sizing: border-box;
   position: relative;
   height: 310px;
-  background-size: cover; //핵중요
+  background-size: cover;
 
   .cell__lowehalf_pic {
     display: inline-block;
