--- a/shopping_how/views/index.ejs
+++ b/shopping_how/views/index.ejs
@@ -127,5 +127,6 @@
       </div>
       <div class="footer"></div>
     </section>
+    <script type="module" src="/javascripts/index.js"></script>
   </body>
 </html>
