Add new Componenet Structure (Processing..) 새로운 컴포넌트 구조 설계 중... 아직 미완성

--- a/public/src/scss/style.scss
+++ b/public/src/scss/style.scss
@@ -1,8 +1,4 @@
-.scssTest {
-  $size: 100px;
-  .box {
-    width: $size;
-    height: $size;
-    background-color: tomato;
-  }
+.app {
+  background: tomato;
+  height: 50px;
 }
