--- a/public/scss/variables.scss
+++ b/public/scss/variables.scss
@@ -2,4 +2,5 @@
 $white: rgb(255, 255, 255);
 $light-gray1: rgb(235, 235, 235);
 $light-gray2: rgb(210, 210, 210);
+$medium-gray: rgb(190, 190, 190);
 $pink: rgb(255, 76, 63);
