Style. 기획전 섹션 윗부분 스타일링

--- a/public/scss/index.scss
+++ b/public/scss/index.scss
@@ -1,6 +1,7 @@
 @import 'reset.css';
-@import 'header.scss';
 @import 'variables.scss';
+@import 'header.scss';
+@import 'banner.scss';
 
 .main-contents-container {
   display: flex;
