--- a/public/scss/banner.scss
+++ b/public/scss/banner.scss
@@ -25,6 +25,8 @@
     overflow: hidden;
 
     .slide {
+      position: relative;
+      left: -100%;
       width: 300%;
       height: 100%;
       .panel {
