Add: 캐로셀 기능 추가

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
     <title>쇼핑하우</title>
     <link rel="stylesheet" href="style/reset.css"> 
     <link rel="stylesheet" href="style/main.css"> 
+    <script defer type="module" src="script/shoppingHow_module.js"></script>
 </head>
 <body>
     <div class="header__container">
@@ -74,6 +75,9 @@
                 <div class="banner__event"><a href="#">
                     <img src="//shop4.daumcdn.net/shophow/sib/0_210219174849_FwZShCdZPYIPpJmvgEiGWverDgJVqrrq" alt="기획전 이벤트">
                 </a></div>
+
+
+
                 <div class="banner__slide">
                     <ul class="slide__wrap">
                         <li class="slide__list"><a href="#">
@@ -86,6 +90,9 @@
                             <img src="//shop1.daumcdn.net/shophow/sib/0_210219175602_vRyGDQxWDethcelhYcMmXKXpgLqlAIAj">
                         </a></li>
                     </ul>
+
+
+
                     <div class="slide__paging">
                         <div class="">
                             <span class="ico_paging">
@@ -106,7 +113,9 @@
                         </button>
                     </div>
                 </div> <!-- .banner__slide -->
-            </div>
+                
+
+            </div> <!-- .banner__main -->
 
             <ul class="banner__list list__box">
                 <% for(let i = 0; i < 5; i++) { %>
