--- a/shopping/public/stylesheets/main.scss
+++ b/shopping/public/stylesheets/main.scss
@@ -7,11 +7,18 @@ $logoImg_height: 51px;
 $nav_height: 56px;
 $content_side_padding: 15%;
 $search_color: #cecfd1;
+$bg_color : #f3f3f3;
 $gray_font: #888;
 $icon_url : url(https://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png);
+$icon2_url : url(https://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/img_home_150131.png);
 $icon_size : 130px 90px;
 $nav_font_size : 16px;
+$img_test: url(https://shop1.daumcdn.net/shophow/sib/0_210219175816_BLrjXAFKSXpUoiPzkxzQFtLjJkHixbZX);
 
+
+.hide {
+    display: none !important;
+}
 
 
 ul, li {
@@ -132,6 +139,7 @@ button, input {
         }
     }
 
+    
 
 
 
@@ -195,7 +203,6 @@ button, input {
 
 
 .main {
-    background-color: #f3f3f3;
     display: flex;
     flex-direction: column;
     align-items: center;
