Add: paging 버튼 변하는 기능 추가

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -80,13 +80,13 @@
 
                 <div class="banner__slide">
                     <ul class="slide__wrap">
-                        <li class="slide__list"><a href="#">
+                        <li class="slide__list" data-index="0"><a href="#">
                             <img src="//shop3.daumcdn.net/shophow/sib/0_210219175556_BtjOWRoiPbsVXvlYusgFvjboDPXRIBQD">
                         </a></li>
-                        <li class="slide__list"><a href="#">
+                        <li class="slide__list" data-index="1"><a href="#">
                             <img src="//shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs">
                         </a></li>
-                        <li class="slide__list"><a href="#">
+                        <li class="slide__list" data-index="2"><a href="#">
                             <img src="//shop1.daumcdn.net/shophow/sib/0_210219175602_vRyGDQxWDethcelhYcMmXKXpgLqlAIAj">
                         </a></li>
                     </ul>
