--- a/raccoon-shopping-express/front/style.scss
+++ b/raccoon-shopping-express/front/style.scss
@@ -878,20 +878,23 @@ section {
           }
           .more-item__container {
             position: relative;
-            width: 100%;
+            width: 1274px;
             // box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
             height: 45px;
             display: flex;
             justify-content: center;
             align-items: center;
             background-color: #ebebeb;
+            border: 1px solid #e4e4e4;
+            border-top: 0;
             .more-item__button {
               width: 100%;
               height: 100%;
               cursor: pointer;
               span {
                 display: inline-block;
-                font-weight: 500;
+                font-weight: 400;
+                color: #333;
               }
             }
 
@@ -899,7 +902,9 @@ section {
               background: #e5e5e5;
               transition: 0.4s;
               span {
-                font-weight: 600;
+                font-weight: 500;
+                transition: 0.4s;
+                color: #333;
               }
             }
           }
